# splat

./: .gitignore  Cargo.toml  README.md  clean.go  cleanup_splats.py  export_cell.py  export_cells.py  plan.py  plot_colmap.py  plot_ply.py  ply_to_colmap_bin.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  split_colmap.py
.github/workflows/: attach-wheels.yml  build-wheels.yml  publish.yml
configs/: q5.yaml
core/: cell.py  crop_colmap.py  ply_reader.py  types.py
examples/: cache.py  cleanup_example.py  patches_example.py  train_splats.py
examples/ortho-prototype/: README.md  requirements.txt  splats_ortho.py
meta-package/: .gitignore  README.md  pyproject.toml
meta-package/wildflow/: __init__.py
native/: cleanup.rs  lib.rs  merge.rs  ortho_cells.rs  patches.rs  split.rs  split_cameras.rs  split_point_cloud.rs
refurbish/: cleanup_splats.py  copy_cell.py  plot_colmap.py
refurbish/core/: colmap_reader.py  grid.py  processor.py  visualizer.py
tests/: __init__.py  test_patches.py
wildflow/: __init__.py
wildflow/splat/: __init__.py  cleanup.py  ortho.py  ortho_renderer.js  patches.py  split.py
