[package]
name = "wildflow-splat"
version = "0.1.2"
edition = "2021"

[lib]
name = "wildflow_splat"
crate-type = ["cdylib"]
path = "native/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
pyo3 = { version = "0.25", features = ["extension-module"] } 